--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <div class="col-md-6 mx-auto">
                 <p class="lead">
                     Type The Given Word Within
-                    <span class="text-success" id="seconds">5</span>&nbsp;Seconds:
+                    <span class="text-success" id="seconds"></span>&nbsp;Seconds:
                 </p>
-                <h2 class="display-2 mb-5" id="current-word">hello</h2>
+                <h2 class="display-2 mb-5" id="current-word"></h2>
                 <input type="text" class="form-control form-control-lg" id="word-input" placeholder="Start typing..." autofocus>
                 <h4 class="mt-3" id="message"></h4>
                 <div class="row mt-5">
@@ -26,7 +26,7 @@
                         <h3>Time Left:&nbsp;<span id="time">0</span></h3>
                     </div>
                     <div class="col-md-6">
-                        <h3>Score:&nbsp;<span id="time">0</span></h3>
+                        <h3>Score:&nbsp;<span id="score">0</span></h3>
                     </div>
                 </div>
                 <div class="row mt-5">
